use 'use strict'

--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -2,14 +2,8 @@
 <html>
 
 <body>
+  <script src="index.js"></script>
 
-  <p>Перед скриптом...</p>
-
-  <script>
-    alert( 'Привет, мир!' );
-  </script>
-
-  <p>...После скрипта.</p>
 
 </body>
 
